@@ -1,3 +1,14 @@
+2006-01-12  Sam Steingold  <sds@gnu.org>
+
+	fixed bug #[ 1399709 ]: cannot append to a file
+	the 2005-12-13 patch that fixed bug #[ 1379620 ] introduced this one
+	* pathname.d (open_output_file): open handle WRONLY only on UNIX
+	and only if the underlying file exists and is special; this allows
+	buffer filling for regular files (there are no special files on WIN32)
+	* stream.d (low_fill_buffered_handle): assume that a non-readable
+	stream with a regular handle has a readable handle
+	(position_file_buffered): reverse last patch
+
 2006-01-11  Sam Steingold  <sds@gnu.org>
 
 	fixed bug [ 1402338 ]: socket-status ignores microseconds in timeout
